<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smartwatch Administrator</string>
    <string name="action_settings">Settings</string>
    <string name="patient_tracking">Patient Locations</string>
    <string name="title_activity_admin_google_mapping">Google Maps</string>
    <string name="hello_world">Hello world!</string>
    <string name="panic_off">Patient State Normal</string>
    <string name="panic_on">Patient Panic On</string>
    <string name="call_smartwatch">Call SmartWatch</string>
    <string name="mapstyle_map">Map</string>
    <string name="mapstyle_satellite">Satellite</string>
    <string name="mapstyle_hybrid">Hybrid</string>
    <string name="mapstyle_select">Map Style…</string>
    <string name="mapstyle_terrain">Terrain</string>
    <string name="geofence_add">Add Fence</string>
    <string name="geofence_modify">Modify Geofence</string>
    <string name="geofence_radius">Radius (metres):</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    
    <!-- copied junk TODO: refine -->
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">
        The version of Google Play services on this device is not authentic
    </string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">
        The app is not licensed to the user
    </string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    
    <!-- Messages -->
    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">
        Invalid latitude(s). Must be in the range -90 to 90 degrees
    </string>
    <string name="geofence_input_error_longitude_invalid">
        Invalid longitude(s). Must be in the range -180 to 180 degrees
    </string>
    <string name="geofence_input_error_radius_invalid">
        Invalid radius(s). Must be 1 meter or greater.
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s geofence(s) %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">
        Latitude should be in the range -90 to 90 degrees
    </string>
    <string name="longitude_error_message">
        Longitude should be in the range -180 to 180 degrees
    </string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="unregister_geofence1">Remove geofence 1</string>
    <string name="unregister_geofence2">Remove geofence 2</string>

    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>

    <!-- Reminder Strings -->
    <string name="title_activity_calendar_reminder">CalendarReminder</string>
    <string name="title_organiser_email">Organiser\'s E-mail:</string>
    <string name="title_reminder_title">Reminder Title</string>
    <string name="title_reminder_description">Reminder Description</string>
    <string name="title_beginning_date">Beginning Date</string>
    <string name="title_beginning_time">Beginning Time</string>
    <string name="title_frequency">Frequency (specify \'Days\')</string>
    <string name="title_set_reminder">Set Reminder</string>
    <string name="patient_checkin_daily">Daily</string>
    <string name="patient_checkin_weekly">Weekly</string>
    <string name="patient_checkin_hourly">Hourly</string>
    <string name="checkin_send_now">Send Now</string>
    <string name="patient_checkin_title">Patient Check-in</string><string name="patientName">Name:</string><string name="patientAge">Age:</string><string name="patientAddress">Address:</string><string name="medicalInformation">Medical Information:</string><string name="emergencyContact">Emergency Contact:</string>
    <string name="updateButton">Update</string>
    <string name="patient_profiles">Patient Profiles</string>
    <string name="saveButton">Save</string>
</resources>
